# python-jwt-example

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/api/: api.py
app/api/endpoints/: login.py  posts.py
app/auth/: jwt_bearer.py  jwt_handler.py
app/config/: logger.py
app/middleware/: logging.py
app/models/: post.py  user.py
app/test/: test-post.py  test-user.py
